# FedML

./: .gitignore  README.md  pyproject.toml
LSTM-pytorch/: README.md  pyproject.toml
LSTM-pytorch/pytorchexample/: client_app.py  task.py
src/: pyproject.toml
src/fedml/: client_app.py  server_app.py  task.py
src/fedml/old/: server_app2.py  task2.py
tests/: test_fedml.py
