[project]
name = "fedml"
dynamic = ["version"]
description = "Add your description here"
authors = [{ name = "Rouven Spiess", email = "rouven@mailbox.org" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool]
[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.3",
    "pytest>=8.3.2",
]

[tool.hatch]
metadata.allow-direct-references = true
build.targets.wheel.packages = ["src/fedml"]
version.source = "vcs"
