[project]
name = "fedml"
dynamic = ["version"]
description = "Add your description here"
authors = [{ name = "Rouven Spiess", email = "rouven@mailbox.org" }]
dependencies = [
    "flwr[simulation]>=1.11.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool]
[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "mypy[d]>=1.12.0",
]

[tool.hatch]
metadata.allow-direct-references = true
build.targets.wheel.packages = ["src/fedml"]
version.source = "vcs"

[tool.flwr.app.components]
serverapp = "fedml.server_app:app"
clientapp = "fedml.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 8
fraction-evaluate = 0.5
local-epochs = 3
learning-rate = 0.1
batch-size = 32

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
